--- a/thread.html
+++ b/thread.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="favicon.ico">
-    <title>Anonymous Forum Home</title>
+    <meta name="description" content="thread">
+    <meta name="author" content="XU Sheng">
+    <link rel="icon" href="img/favicon.ico">
+    <title>Anonymous Forum Thread</title>
  
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
