--- a/welcome.html
+++ b/welcome.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <head>
+    <meta name="description" content="welcome">
+    <meta name="author" content="XU Sheng">
+    <link rel="icon" href="img/favicon.ico">
+    <title>Anonymous Forum Welcome</title>
     <style type="text/css">
         #page-login {
             text-align: center;
