add user.html & input required

--- a/thread.html
+++ b/thread.html
@@ -203,7 +203,7 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#" class="btn btn-success btn-lg active" id="personal" role="button">Personal Info &raquo;</a>
+                        <a href="user.html" class="btn btn-success btn-lg active" id="personal" role="button">Personal Info &raquo;</a>
                     </li>
                 </ul>
                 <!-- <form class="navbar-form navbar-right">
