disable link to other users

--- a/home.html
+++ b/home.html
@@ -164,10 +164,10 @@
 							"<p><i class='glyphicon glyphicon-plus'></i> "+ thread_array[i].re +"</p>" + 
 							"<p><i class='glyphicon glyphicon-eye-open'></i> "+ thread_array[i].view +"</p></td>" + 
 							"<td class='col-md-2'>" + 
-							"<p class='thread-post'><i class='glyphicon glyphicon-user'></i><a href='user.html?uid=" + thread_array[i].pid + "' class='thread-post'> " + thread_array[i].pid + "</a></p>" + 
+							"<p class='thread-post'><i class='glyphicon glyphicon-user'></i> " + thread_array[i].pid + "</p>" + 
 							"<p><i class='glyphicon glyphicon-calendar'></i> " + thread_array[i].post + "</p></td>" +
 							"<td class='col-md-2'>" + 
-							"<p class='thread-last'><i class='glyphicon glyphicon-user'></i><a href='user.html?uid=" + thread_array[i].lid + "' class='thread-last'> " + thread_array[i].lid + "</a></p>" + 
+							"<p class='thread-last'><i class='glyphicon glyphicon-user'></i> " + thread_array[i].lid + "</p>" + 
 							"<p><i class='glyphicon glyphicon-calendar'></i> " + thread_array[i].last + "</p></td>" + 
 							"</tr>");
 					}
