--- a/user.html
+++ b/user.html
@@ -151,7 +151,7 @@
 							"<p><i class='glyphicon glyphicon-plus'></i> "+ thread_array[i].re +"</p>" + 
 							"<p><i class='glyphicon glyphicon-eye-open'></i> "+ thread_array[i].view +"</p></td>" + 
 							"<td class='col-md-2'>" + 
-							"<p class='thread-post'><i class='glyphicon glyphicon-user'></i><a href='user.html?uid=" + thread_array[i].pid + "' class='thread-post'> " + thread_array[i].pid + "</a></p>" + 
+							"<p class='thread-post'><i class='glyphicon glyphicon-user'></i> " + thread_array[i].pid + "</p>" + 
 							"<p><i class='glyphicon glyphicon-calendar'></i> " + thread_array[i].post + "</p></td>" +
 							"<td class='col-md-2'>" + 
 							"<p class='thread-you'><i class='glyphicon glyphicon-user'></i> You</a></p>" + 
